--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 services:
-  registry:
+  registry-api:
     build:
       context: .
-    image: registry
-    container_name: registry
+    container_name: registry-api
     links:
       - mongodb
     depends_on:
@@ -28,12 +27,12 @@ services:
     ports:
       - 27017:27017
     restart: "unless-stopped"
-  ui:
+  registry-ui:
     build:
       context: ./ui
       args:
         VITE_API_BASE_URL: http://localhost:8080/v0
-    container_name: ui
+    container_name: registry-ui
     ports:
       - 3000:80
     restart: unless-stopped
